--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #afafaf;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.principal-title {
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-size: 60px;
+  font-weight: 500;
+}
+
+.principal-img {
+  display: flex;
+  position: absolute;
+  right: 0;
+  width: 600px;
 }
