--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 
 body {
   background-color: #afafaf;
 }
 
 .principal-title {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Comfortaa', cursive;
   color: #fff;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 500;
+  margin-left: 130px;
+  
 }
 
 .principal-img {
@@ -16,4 +18,17 @@ body {
   position: absolute;
   right: 0;
   width: 600px;
+}
+
+.principal-container{
+
+  width: 800px;
+  height: 400px;
+  background: rgba( 214, 214, 214, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+margin-left: 30px;
 }
