--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 
+html {
+  min-height: 100%;
+}
 body {
+  margin: 0;
+  padding: 0;
+  font-family: "Comfortaa", cursive;
   background-color: #afafaf;
+  min-height: 100%;
+  padding-bottom: 5rem;
+}
+h2 {
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Comfortaa", cursive;
+  letter-spacing: 1px;
 }
 
 .principal-title {
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   color: #fff;
   font-size: 40px;
   font-weight: 500;
-  margin-left: 130px;
-  
+  padding: 3rem 0;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.principal-container {
+  display: flex;
+  position: absolute;
+  left: 150px;
+}
+
+.container-principal__img {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: auto;
 }
 
 .principal-img {
-  display: flex;
-  position: absolute;
-  right: 0;
-  width: 600px;
+  width: 100%;
+  height: auto;
 }
 
-.principal-container{
+.lista-citas .media {
+  border-bottom: 1px solid #e1e1e1;
+  padding-bottom: 3rem;
+}
 
-  width: 800px;
-  height: 400px;
-  background: rgba( 214, 214, 214, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
-margin-left: 30px;
+.lista-citas .media:last-of-type {
+  border-bottom: 0;
+}
+.lista-citas .media-body p {
+  margin: 0;
+}
+.lista-citas .media-body button {
+  margin-top: 1rem !important;
+}
+.lista-citas .media-body span {
+  font-weight: bold;
+}
+
+label {
+  color: white;
+}
+
+input[type="date"],
+input[type="time"] {
+  height: 38px;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
+}
+
+.cita {
+  padding: 2rem;
+  background: white;
+  border-bottom: 1px solid #e1e1e1;
+  color: black;
+}
+
+.cita p {
+  font-weight: bold;
+  margin-bottom: 0.8rem;
+}
+.cita p span {
+  font-weight: normal;
+}
+.cita:first-of-type {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+.cita:last-of-type {
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.button.eliminar,
+.button.eliminar:hover {
+  background-color: #c10059;
+  color: white;
+  margin-top: 2rem;
+}
+
+.alerta-error {
+  background-color: white;
+  color: red;
+  padding: 1rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "Staatliches", cursive;
 }
