agrego seccion de administrador de ciitas, modifico la finalidad de la app

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 html {
   min-height: 100%;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -11,56 +12,78 @@ body {
   min-height: 100%;
   padding-bottom: 5rem;
 }
-h2 {
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  
-  letter-spacing: 1px;
-}
 
-h1 {
-  
-  color: #fff;
-  font-size: 40px;
-  font-weight: 500;
-  padding: 3rem 0;
+.principal-title {
+  color: #fafafa;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  box-sizing: border-box;
   text-align: center;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.principal-container {
-  width: 50%;
-  position: absolute;
-  left: 50px;
-  z-index: 1;
-  
-  
 }
 
 .form-container {
+  color: #fafafa;
+  width: 60%;
+  min-width: 230px;
+  padding: 50px;
+  box-sizing: border-box;
   
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  
+}
+
+.style-container{
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  box-sizing: border-box;
-  padding: 50px;
+  z-index: 1;
+
 }
 
-.container-principal__img {
+.img-container {
+  width: 50%;
+  display: flex;
   position: absolute;
   right: 0;
-  width: 50%;
-  height: auto;
 }
 
-.principal-img {
+.img {
   width: 100%;
-  height: auto;
+}
+
+.citas-container {
+  width: 100%;
+  position: absolute;
+  top: 880px;
+  
+
+ 
+}
+
+.cards-citas{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 30px;
+  padding: 20px;
+  box-sizing: border-box;
+  
+
+}
+
+h3{
+  color: #1EAEDB;
+}
+strong{
+  color: #fafafa;
 }
 
 .lista-citas .media {
@@ -96,76 +119,23 @@ input[type="time"] {
   box-sizing: border-box;
 }
 
-.cita {
-  padding: 2rem;
-  background: white;
-  border-bottom: 1px solid #e1e1e1;
-  color: black;
-}
 
-.cita p {
-  font-weight: bold;
-  margin-bottom: 0.8rem;
-}
-.cita p span {
-  font-weight: normal;
-}
-.cita:first-of-type {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-.cita:last-of-type {
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-.button.eliminar,
-.button.eliminar:hover {
-  background-color: #c10059;
-  color: white;
-  margin-top: 2rem;
-}
 
-.alerta-error {
-  background-color: white;
-  color: red;
-  padding: 1rem;
-  font-size: 2rem;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: "Staatliches", cursive;
-}
-
-@media(max-width:800px){
-  
-  .principal-container{
-    width: 100%;
-    
-    position: absolute;
-  left: 0;
-  }
-
-  .form-container{
+@media (max-width: 800px) {
+  .form-container {
     width: 100%;
     padding: 50px;
   }
 
-  .container-principal__img {
+  .img-container{
+    width: 100%;
     position: absolute;
-    right: 0;
-    width: 100%;
-    height: auto;
-  }
-  
-  .principal-img {
-    width: 100%;
-    height: auto;
-  }
-  h1{
-    padding: 0;
-    font-size: 30px;
-
+    right: 200px;
   }
 
+  .img {
+    width: 200%;
+    
+    
+  }
 }
-
-
