--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ strong{
   color: #fafafa;
 }
 
+.error-style{
+  color: red;
+}
+
 .lista-citas .media {
   border-bottom: 1px solid #e1e1e1;
   padding-bottom: 3rem;
